FIX: alignment of avatars and category badge on mobile

--- a/app/assets/stylesheets/mobile/topic-list.scss
+++ b/app/assets/stylesheets/mobile/topic-list.scss
@@ -163,6 +163,10 @@
 // --------------------------------------------------
 
 #topic-list.categories {
+  .badge-category {
+    display: inline-block;
+    margin-top: 1px;
+  }
   .featured-users {
     @include portrait  {
       margin-bottom: 10px;
